# warp-transducer-updated

./: .gitignore  CMakeLists.txt
pytorch_binding/: README.md  setup.py
pytorch_binding/src/: binding.cpp
